--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/text_view_time"
+        android:layout_margin="10dp"
+        android:layout_alignParentEnd="true"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:textColor="#f20"
+        android:text="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <ImageView
         android:id="@+id/imgRandom"
         android:layout_width="200dp"
